# webauth-via-ssh

./: .gitignore  Makefile.in  README.mkd  configure.ac
auth-modules/: .gitignore  Makefile  Makefile.in  authd.c  common.h  token-gen.c  tokend.c
doc/: design-notes.txt
ssh-conf/: .gitignore  Makefile  Makefile.in  authorized_keys_script.sh  authorized_keys_script.sh.in  sshd_config  sshd_config.in  start-sshd.sh  start-sshd.sh.in
test-app/: .gitignore  startnginx.sh  startnginx.sh.in
test-app/fcgi/: .gitignore  Makefile  Makefile.in  b64dec.c  hello.c  test.cpp
test-app/html/: default.css  login.html  login.html.in  register.html
test-app/js/: post-text.js  ssh-login.js  ssh-login.js.in
test-app/nginx/: fastcgi.conf  nginx.conf  nginx.conf.in
